--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">CRHelper</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Setting</string>
     <string name="title_activity_teachers">teachersActivity</string>
     <string name="title_activity_assignment">assignmentActivity</string>
 
@@ -46,4 +46,5 @@
 
 
     </string-array>
+    <string name="title_activity_about">About</string>
 </resources>
