--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_new_activity">New_activity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_profile_pic">profile_pic</string>
 </resources>
