--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@
     <string name="title_activity_splash">Splash</string>
     <string name="title_activity_new_activity">New_activity</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_profile_pic">profile_pic</string>
+    <string name="title_activity_profile_pic">Profile Data</string>
+    <string name="title_activity_student_list_info">student_list_info</string>
 </resources>
